fixed header nav alignment

--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,7 @@ footer span {
 	}
 	
 	header nav {
-		width: 40%;
+		width: 50%;
 	}
 
 	header nav ul {
